force-app/main/default/objects/Ebikesales__x/Ebikesales__x.object-meta.xml
<CustomObject>
    <description>ebikesales</description>
    <externalDataSource>Athena</externalDataSource>
    <externalName>ebikesdatabase.ebikesales</externalName>
    <label>eBike Athena Sale</label>
    <pluralLabel>eBike Athena Sales</pluralLabel>
</CustomObject>