force-app/main/default/objects/Ebikesales__x/fields/Account_created__c.field-meta.xml
<CustomField>
    <fullName>Account_created__c</fullName>
    <externalDeveloperName>account_created</externalDeveloperName>
    <label>Account_created</label>
    <length>128</length>
    <type>Text</type>
</CustomField>