force-app/main/default/objects/Ebikesales__x/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <externalDeveloperName>city</externalDeveloperName>
    <label>City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>