force-app/main/default/objects/Ebikesales__x/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <externalDeveloperName>country</externalDeveloperName>
    <label>Country</label>
    <length>128</length>
    <type>Text</type>
</CustomField>