force-app/main/default/objects/Ebikesales__x/fields/Last_login__c.field-meta.xml
<CustomField>
    <fullName>Last_login__c</fullName>
    <externalDeveloperName>last_login</externalDeveloperName>
    <label>Last_login</label>
    <length>128</length>
    <type>Text</type>
</CustomField>