force-app/main/default/objects/Ebikesales__x/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <externalDeveloperName>latitude</externalDeveloperName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>