force-app/main/default/objects/Ebikesales__x/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <externalDeveloperName>longitude</externalDeveloperName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>