force-app/main/default/objects/Ebikesales__x/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <externalDeveloperName>payment_type</externalDeveloperName>
    <label>Payment_type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>