force-app/main/default/objects/Ebikesales__x/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <externalDeveloperName>product</externalDeveloperName>
    <label>Product</label>
    <length>128</length>
    <referenceTargetField>Product__c.ProductCode__c</referenceTargetField>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>eBike Athena Sales</relationshipLabel>
    <relationshipName>eBike_Athena_Sales</relationshipName>
    <type>IndirectLookup</type>
</CustomField>