force-app/main/default/objects/Ebikesales__x/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <externalDeveloperName>state</externalDeveloperName>
    <label>State</label>
    <length>128</length>
    <type>Text</type>
</CustomField>