force-app/main/default/objects/Ebikesales__x/fields/Transaction_date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_date__c</fullName>
    <externalDeveloperName>transaction_date</externalDeveloperName>
    <label>Transaction_date</label>
    <length>128</length>
    <type>Text</type>
</CustomField>