force-app/main/default/objects/Ebikesales__x/fields/Transaction_id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_id__c</fullName>
    <externalDeveloperName>transaction_id</externalDeveloperName>
    <label>Transaction_id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>